--- a/README
+++ b/README
@@ -1,9 +1,5 @@
-EKG: 265Hz
-GSR: 32Hz
-Respiration and EMG: 32Hz -> HR: 4Hz
-
-Cannels:
-HR:			B
-GSR:		C
-EKGSmile:	D
-EKGFrown:	E
+Sensor		SampleRate			Channel
+EKG (BVP)	256Hz (HR -> 4Hz)	A or B
+GSR			32Hz				C to H
+EMGFrown	32Hz				C to H
+EMGSmile	32Hz				C to H
