updated thesis, diary

--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -10,7 +10,7 @@
 %reader what s/he needs to know to understand the rest of the thesis.
 
 Using emotional responses to increase the level of users interaction with a real-time 
-play technology  requires an effective technique to identifying specific emotion 
+play technology requires an effective technique to identifying specific emotion 
 states within an emotional space. Major existing emotion models in the
 psychology literture includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} ,
 dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models from appraisal 
@@ -44,10 +44,17 @@ that might be labeled as displeasure/pleasure (horizontal
 axis) and low/high arousal (vertical axis) It is not easy to
 map affective states into distinctive emotional states, However these models can 
 provide a mapping between predefined
-states and the level of arousal and valence ~\cite{zagalo2004story}, Figure 1.
+states and the level of arousal and valence ~\cite{zagalo2004story}, Figure ~\ref{fig:russelavspace}.
 
-Figure 1: Russell's circumplex model with two axes
-of arousal and valence 1
+\begin{figure}[h!]
+  \caption[Russell's arousal and valence model]
+  {Russell's circumplex model with two axes of arousal and valence \footnotemark.}
+  \centering
+  \includegraphics[width=0.5\textwidth]{images/russell-av-space.pdf}
+  \label{fig:russelavspace}
+\end{figure}
+
+\footnotetext{Photo credit: http://imagine-it.org/gamessurvey/}
 
 Both mentioned models for identifying emotions convey some
 practical issues in emotion measurement. In a HCI context, the 
@@ -71,3 +78,12 @@ Manikin ~\cite{bradley1994measuring}, allow
 for quick assessments of user emotional experiences but they
 may aggregate responses over the course of many events ~\cite{zhang2010service}.
 This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
+
+
+\section{What is Emotion?}
+
+\section{Play Technologies and Emotion}
+
+\section{Emotion and Physiological Signals}
+
+\section{Adaptive Play Technologies}
