--- a/doc/thesis/content/ch03-problem-and-solution.tex
+++ b/doc/thesis/content/ch03-problem-and-solution.tex
@@ -1,6 +1,17 @@
 % 10 to 15 pages
 % - talk about various game design elements, player, npcs and environment 
 % and their connection to the play experience
-% - talk about the sensors and the fuzzy framework for emotion recognition
-% and connect that to the game design elements
 
+\section{Adaptive Game Design}
+\subsection{Player}
+\subsection{NPCs}
+\subsection{Environment}
+
+\section{Phisiological Signals}
+\subsection{Heart Rate}
+\subsection{Galvanic Skin Response}
+\subsection{Facial Electromyography}
+
+\section{Real-Time Affect Engine}
+\subsection{Fuzzy Logic for Space Transformation}
+\subsection{Physiological Signals to Arousal and Valence}
