--- a/doc/thesis/content/ch04-implementation.tex
+++ b/doc/thesis/content/ch04-implementation.tex
@@ -1,6 +1,8 @@
 % 10 to 15 pages
 % talk about various aspects of system's implementation and 
 % how it is integrated with the interactive technology
+% - talk about the sensors and the fuzzy framework for emotion recognition
+% and connect that to the game design elements
 
 \section{Recognising Emotion}
 Heart rate (HR), blood pressure, respiration, electrodermal
@@ -64,3 +66,8 @@ Once connected via sensors to the emotion recognition system,
 the affective state of the user can be captured continuously and
 in real-time and it can be monitored on a displayed
 2-dimenstional graph of valance and arousal, Figure 1.
+
+\section{Inegration With Valve Source Engine}
+% talk about Modding Half Life EP2
+\subsection{Level Design}
+\subsection{The Director}
