--- a/doc/thesis/content/ch06-discussion.tex
+++ b/doc/thesis/content/ch06-discussion.tex
@@ -1,5 +1,5 @@
 5 to 10 pages
-talk about the conclusion
+talk for the discussion
 State what you've done and what you've found
 Summarize contributions (achievements and impact)
 Outline open issues/directions for future work
