--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -2,6 +2,8 @@
 
 \documentclass{uofsthesis-cs}
 
+\usepackage[pdftex]{graphicx}
+
 %-------------------------------------------------------------------------------
 
 % THESIS TITLE
@@ -51,11 +53,11 @@ S7N 5C9
 
 % Chapters
 \chapter{Introduction}                                \input{content/ch01-intro.tex}
-\chapter{Background}                                  \input{content/ch02-lit-review.tex}
-\chapter{Games Design Elements and the Affect Engine} \input{content/ch03-problem-and-solution.tex}
+\chapter{Emotion and Play Technologies}               \input{content/ch02-lit-review.tex}
+\chapter{Customizing Play Experience in Real-Time}    \input{content/ch03-problem-and-solution.tex}
 \chapter{Implementation and Integration}              \input{content/ch04-implementation.tex}
 \chapter{Experimentation}                             \input{content/ch05-experimentation.tex}
-\chapter{Conclusion}                                  \input{content/ch06-conclusion.tex}
+\chapter{Discussion}                                  \input{content/ch06-discussion.tex}
 
 %-------------------------------------------------------------------------------
 
@@ -66,7 +68,7 @@ S7N 5C9
 
 % APPENDICES
 \uofsappendix
-\chapter{Fuzzy Functions} \input{content/apndx-a-fuzzy.tex}
+\chapter{Fuzzy Functions} \input{content/appendix-a-fuzzy.tex}
 
 %-------------------------------------------------------------------------------
 
