--- a/doc/thesis/content/abbreviations.tex
+++ b/doc/thesis/content/abbreviations.tex
@@ -1,3 +1,10 @@
-\abbrev{SCUBA}{Self Contained Underwater Breathing Apparatus}
-\abbrev{LOF}{List of Figures}
-\abbrev{LOT}{List of Tables}
+\abbrev{TT}   {Thought Technology}
+\abbrev{GSR}  {Galvanic Skin Response}
+\abbrev{EMG}  {Electromyography}
+\abbrev{HR}   {Heart Rate}
+\abbrev{BVP}  {Blood Volume Pulse}
+\abbrev{EDA}  {Electrodermal Activity}
+\abbrev{HCI}  {Human Computer Interaction}
+\abbrev{AV}   {Arousal/Valence}
+\abbrev{NPC}  {Non-Player Character}
+\abbrev{Mod}  {Modification}
