--- a/doc/thesis/content/acknowledgements.tex
+++ b/doc/thesis/content/acknowledgements.tex
@@ -1,25 +1,27 @@
-Foremost, I would like to express my sincere gratitude to my advisor 
-Prof. Ying Wu for the continuous support of my Ph.D study and research,
-for his patience, motivation, enthusiasm, and immense knowledge.
-His guidance helped me in all the time of research and writing of this thesis.
-I could not have imagined having a better advisor and mentor for my Ph.D study.\\
+First and foremost thanks God for bestowing me the ability to
+learn, to speak and to write. For all of the oppurtinities for progress and
+for all the mercy and compassion I have experienced throughout my life from Him.\\
 
-Besides my advisor, I would like to thank the rest of my thesis
-committee: Prof. Aggelos K.Katsaggelos, Prof. Thrasyvoulos N.Pappas, and
-Dr. James Crenshaw, for their encouragement, insightful comments, and hard questions.\\
+I would like to express my sincere gratitude to my advisors 
+Prof. Kevin G. Stanley and Prof. Regan Mandryk for the continuous support of my M.S. study and research,
+for their patience, motivation and friendliness.
+Their guidance helped me in all the time of research and writing of this thesis.
+I could not imagine having any better advisors and mentors for my M.S. study.\\
 
-My sincere thanks also goes to Dr. James Crenshaw, Dr. Senthil Periaswamy,
-and Dr. Qiong Liu, for offering me the summer internship opportunities in
-their groups and leading me working on diverse exciting projects.\\
+Besides my advisors, I would like to thank the rest of my thesis
+committee: Prof. , Prof. , and Dr. , for their 
+encouragement, insightful comments, and hard questions.\\
 
-I thank my fellow labmates in Northwestern Vision Group: Gang Hua, Ting Yu,
-Zhimin Fan, Shengyang Dai, Junsong Yuan, Jiang Xu, Jialue Fan, and Neelabh Gupta,
-for the stimulating discussions, for the sleepless nights we were working together
-before deadlines, and for all the fun we have had in the last four years.
-Also I thank my friends in Tsinghua University: Chen Fan, Wensheng Wang, Bo Qin, Xiwei Wang,
-Yonggang Zhao, Hua Chen, Junlin Li, and Rui Zhou. In particular, I am grateful to
-Dr. Chen Fan for enlightening me the first glance of research.\\
+My sincere thanks also goes to Dr. Daniel Neilson, Gwen Lancaster,
+Shakiba Jalal and Dr. Stanley for offering me the internship opportunities
+and leading me working on diverse exciting projects.\\
 
-Last but not the least, I would like to thank my family: my parents Siyu Yang and
-Xiaolan Ding, for giving birth to me at the first place and supporting me spiritually
+I thank my fellow labmates in DISCUS and HCI Labs: Mohammad Hashemian, Amin Tavassolian,
+Ariyan Zohoorian, Farjana Eishita, Max Birk, Michael Kalyn, Michael Bullock and Steve Sutcliffe,
+for the stimulating discussions, for the nights we were working together,
+and for all the fun we have had in the last years.
+Also I thank all of my other friends in University of Saskatchewan.\\
+
+Last but not the least, I would like to thank my family: my parents Mohammad Negini and
+Farzaneh Sarmadi, for giving birth to me at the first place and supporting me spiritually
 throughout my life.\\
