cleaned up and imported some papers

--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -80,7 +80,7 @@ may aggregate responses over the course of many events ~\cite{zhang2010service}.
 This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
 
-\section{What is Emotion?}
+\section{Why Do We Play?}
 
 \section{Play Technologies and Emotion}
 
