--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -13,7 +13,7 @@
 \author{Faham Negini}
 
 % DEGREE SOUGHT
-\degree{\MSc}         
+\degree{\MSc}
 
 % EXPECTED CONVOCATION DATE
 \convocationdate{September/2013}
@@ -52,12 +52,12 @@ S7N 5C9
 %-------------------------------------------------------------------------------
 
 % Chapters
-\chapter{Introduction}                                \input{content/ch01-intro.tex}
-\chapter{Emotion and Play Technologies}               \input{content/ch02-lit-review.tex}
-\chapter{Customizing Play Experience in Real-Time}    \input{content/ch03-problem-and-solution.tex}
-\chapter{Implementation and Integration}              \input{content/ch04-implementation.tex}
-\chapter{Experimentation}                             \input{content/ch05-experimentation.tex}
-\chapter{Discussion}                                  \input{content/ch06-discussion.tex}
+\chapter{Introduction}                              \input{content/ch01-intro.tex}
+\chapter{Human and Play Technologies}               \input{content/ch02-lit-review.tex}
+\chapter{Customizing Play Experience in Real-Time}  \input{content/ch03-problem-and-solution.tex}
+\chapter{Implementation and Integration}            \input{content/ch04-implementation.tex}
+\chapter{Experimentation}                           \input{content/ch05-experimentation.tex}
+\chapter{Discussion}                                \input{content/ch06-discussion.tex}
 
 %-------------------------------------------------------------------------------
 
