added new related papers, working on thesis

--- a/doc/thesis/content/import/import.bib
+++ b/doc/thesis/content/import/import.bib
@@ -3,3 +3,53 @@
   author={Lazzaro, Nicole},
   year={2004}
 }
+@article{cherney2008mom,
+  title={Mom, let me play more computer games: They improve my mental rotation skills},
+  author={Cherney, Isabelle D},
+  journal={Sex Roles},
+  volume={59},
+  number={11-12},
+  pages={776--786},
+  year={2008},
+  publisher={Springer}
+}
+@inproceedings{epp2011identifying,
+  title={Identifying emotional states using keystroke dynamics},
+  author={Epp, Clayton and Lippold, Michael and Mandryk, Regan L},
+  booktitle={Proceedings of the 2011 annual conference on Human factors in computing systems},
+  pages={715--724},
+  year={2011},
+  organization={ACM}
+}
+@inproceedings{nacke2011biofeedback,
+  title={Biofeedback game design: using direct and indirect physiological control to enhance game interaction},
+  author={Nacke, Lennart Erik and Kalyn, Michael and Lough, Calvin and Mandryk, Regan Lee},
+  booktitle={Proceedings of the 2011 annual conference on Human factors in computing systems},
+  pages={103--112},
+  year={2011},
+  organization={ACM}
+}
+@inproceedings{fairclough2011brain,
+  title={Brain and body interfaces: Designing for meaningful interaction},
+  author={Fairclough, Stephen H and Gilleade, Kiel and Nacke, Lennart E and Mandryk, Regan L},
+  booktitle={PART 2-----------Proceedings of the 2011 annual conference extended abstracts on Human factors in computing systems},
+  pages={65--68},
+  year={2011},
+  organization={ACM}
+}
+@inproceedings{mandryk2006continuous,
+  title={A continuous and objective evaluation of emotional experience with interactive play environments},
+  author={Mandryk, Regan L and Atkins, M Stella and Inkpen, Kori M},
+  booktitle={Proceedings of the SIGCHI conference on Human Factors in computing systems},
+  pages={1027--1036},
+  year={2006},
+  organization={ACM}
+}
+@inproceedings{olesen2008real,
+  title={Real-time challenge balance in an RTS game using rtNEAT},
+  author={Olesen, Jacob Kaae and Yannakakis, Georgios N and Hallam, John},
+  booktitle={Computational Intelligence and Games, 2008. CIG'08. IEEE Symposium On},
+  pages={87--94},
+  year={2008},
+  organization={IEEE}
+}
