--- a/doc/thesis/content/import/lazzaro2004we.tex
+++ b/doc/thesis/content/import/lazzaro2004we.tex
@@ -1,6 +1,24 @@
 ------------------------
+People play games to change or structure their internal experiences. Adults in this study, 
+enjoy filling their heads with thoughts and emotions unrelated to work or school, 
+others enjoy the challenge and chance to test their abilities. Games offer an efficiency 
+and order in playing that they want in life. They value the sensations from doing new 
+things such as dirt-bike racing or flying, that they otherwise lack the skills, 
+resources, or social permission to do. A few like to escape the real world; others 
+enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete 
+absorption. The exciting and relaxing effects of games is very appealing and some apply 
+its therapeutic benefits to "get perspective," calm down after a hard day, or build 
+self-esteem. Direct observation reveals details about player emotion. We find emotion 
+in player's visceral, behavioral, cognitive, and social responses to games. Players play 
+to experience these body sensations that result from and drive their actions. Some crave 
+the increased heart rate of excitement from a race, the skin prickling sensation from 
+Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is 
+simply the exchange of worries and thought and feelings for relaxation and contentment 
+or a feeling of achievement knowing they did it right.
+------------------------
 To create more emotion in innovative future games, we at XEODesign want to know more
-about the role of emotion in games and identify ways to create emotion other than story cutscenes. In improving over 40 million Player Experiences during twelve years of research and
+about the role of emotion in games and identify ways to create emotion other than story 
+cutscenes. In improving over 40 million Player Experiences during twelve years of research and
 design we have seen people get angry, excited, and on occasion even cry. These reactions
 make us wonder how many emotions do games create? What makes failing 80% of the time
 fun? Do people play to feel emotions as well as challenge? If emotions are important to play,
@@ -8,27 +26,23 @@ where do they come from? Do people modify games to feel differently? Is it possi
 emotions into games by adding emotion-producing objects or actions to game play rather than
 cut scenes? To what extent are game developers already doing this?
 ------------------------
-
-People play games to change or structure their internal experiences. Adults in this study, enjoy filling their heads with thoughts and emotions unrelated to work or school, others enjoy the challenge and chance to test their abilities. Games offer an efficiency and order in playing that they want in life. They value the sensations from doing new things such as dirt-bike racing or flying, that they otherwise lack the skills, resources, or social permission to do. A few like to escape the real world; others enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete absorption. The exciting and relaxing effects of games is very appealing and some apply its therapeutic benefits to “get perspective,” calm down after a hard day, or build self-esteem. Direct observation reveals details about player emotion. We find emotion in player’s visceral, behavioral, cognitive, and social responses to games. Players play to experience these body sensations that result from and drive their actions. Some crave the increased heart rate of excitement from a race, the skin prickling sensation from Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is simply the exchange of worries and thought and feelings for relaxation and contentment or a feeling of achievement knowing they did it right.
-------------------------
-
 Pioneers in Player Experience Research and Design methods XEODesign conducted an
 independent cross-genre research study on why people play games and identified over thirty
 emotions coming from gameplay rather than story. Our results revealed that people play
 games not so much for the game itself as for the experience the game creates: an adrenaline
 rush, a vicarious adventure, a mental challenge; or the structure games provide, such as a
-moment of solitude or the company of friends. People play games to create moment-tomoment experiences, whether they are overcoming a difficult game challenge, seeking relief
-from every-day worries, or pursuing what Hal Barwood calls simply “the joy of figuring it out.”
+moment of solitude or the company of friends. People play games to create moment-tomoment 
+experiences, whether they are overcoming a difficult game challenge, seeking relief from 
+every-day worries, or pursuing what Hal Barwood calls simply "the joy of figuring it out."
 ------------------------
-
 The Four Keys unlock emotion with:
 1. Hard Fun: Players like the opportunities for challenge, strategy, and problem
-solving. Their comments focus on the game’s challenge and strategic thinking and
-problem solving. This “Hard Fun” frequently generates emotions and experiences of
+solving. Their comments focus on the game's challenge and strategic thinking and
+problem solving. This "Hard Fun" frequently generates emotions and experiences of
 Frustration, and Fiero.
 2. Easy Fun: Players enjoy intrigue and curiosity. Players become immersed in games
 when it absorbs their complete attention, or when it takes them on an exciting
-adventure. These Immersive game aspects are “Easy Fun” and generate emotions
+adventure. These Immersive game aspects are "Easy Fun" and generate emotions
 and experiences of Wonder, Awe, and Mystery.
 3. Altered States: Players treasure the enjoyment from their internal experiences in
 reaction to the visceral, behavior, cognitive, and social properties. These players
@@ -39,7 +53,6 @@ These players enjoy the emotions of Amusement, Schadenfreude, and Naches
 coming fromthe social experiences of competition, teamwork, as well as opportunity
 for social bonding and personal recognition that comes from playing with others.
 ------------------------
-
 1. Hard Fun
 Emotions from Meaningful Challenges, Strategies, and Puzzles
 For many players overcoming obstacles is why they play. Hard Fun creates emotion by
@@ -55,7 +68,7 @@ Challenge say they like:
 • Requiring strategy rather than luck
 Games with this Key offer compelling challenges with a choice of strategies. They balance
 game difficulty with player skill through levels, player progress, or player controls. In Mario Kart
-the difficulty of the challenge matches the skill of novice and advanced players (if you can’t
+the difficulty of the challenge matches the skill of novice and advanced players (if you can't
 drive, you can at least throw stuff); plus it offers emotion opportunities from cooperative and
 competitive gameplay. Games with this Key include Civilization, Halo, Top Spin Tennis,
 Crosswords, Hearts, Tetris, and Collapse. Some games offer a choice of winning conditions
