--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -9,12 +9,14 @@
 %You should clearly and precisely define all of the key concepts dealt with in the rest of the thesis, and teach the 
 %reader what s/he needs to know to understand the rest of the thesis.
 
+%%% 1 page: overview of what is going on
+
 Using emotional responses to increase the level of users interaction with a real-time 
 play technology requires an effective technique to identifying specific emotion 
 states within an emotional space. Major existing emotion models in the
 psychology literture includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} ,
-dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models from appraisal 
-theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
+dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models 
+from appraisal theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
 
 Basic emotion theory identifes anger, disgust, fear, happiness, sadness, and 
 surprise ~\cite{peter2006emotion} as the consice set of primary
@@ -44,7 +46,8 @@ that might be labeled as displeasure/pleasure (horizontal
 axis) and low/high arousal (vertical axis) It is not easy to
 map affective states into distinctive emotional states, However these models can 
 provide a mapping between predefined
-states and the level of arousal and valence ~\cite{zagalo2004story}, Figure ~\ref{fig:russelavspace}.
+states and the level of arousal and valence ~\cite{zagalo2004story}, 
+Figure ~\ref{fig:russelavspace}.
 
 \begin{figure}[h!]
   \caption[Russell's arousal and valence model]
@@ -81,9 +84,40 @@ This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
 
 \section{Why Do We Play?}
+%%% 3 pages: what are games for and why do we play them
+%%% the importance of being challenged for people, and how it helps them to develop
 
-\section{Play Technologies and Emotion}
+lazzaro2004we---
+others enjoy the challenge and chance to test their abilities. Games offer an efficiency 
+and order in playing that they want in life. They value the sensations from doing new 
+things such as dirt-bike racing or flying, that they otherwise lack the skills, 
+resources, or social permission to do. A few like to escape the real world; others 
+enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete 
+absorption. The exciting and relaxing effects of games is very appealing and some apply 
+its therapeutic benefits to "get perspective," calm down after a hard day, or build 
+self-esteem. Direct observation reveals details about player emotion. We find emotion 
+in player's visceral, behavioral, cognitive, and social responses to games. Players play 
+to experience these body sensations that result from and drive their actions. Some crave 
+the increased heart rate of excitement from a race, the skin prickling sensation from 
+Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is 
+simply the exchange of worries and thought and feelings for relaxation and contentment 
+or a feeling of achievement knowing they did it right. ---lazzaro2004we
 
-\section{Emotion and Physiological Signals}
+Playing video games for entertainment would help people to have new internal experiences. 
+The virtual world of video games lets adults to play as new characters and enjoy filling 
+their heads with throughts and emotions unrelated to their work or school. Some people value 
+the sensation
+
+Games are opportunities for development and design of environemnts therefore 
+the player can interactively experience various emotions and mental conditions.
+This interactive experience in contrast to movies 
+and other major types of digital entertainment is what makes them exceptional
+
+\section{Play Technologies and Human Body}
+%%% 5 pages: human body and play technologies
+%%% getting challenged and physiological signals, the importance of GSR
 
 \section{Adaptive Play Technologies}
+%%% 10 pages: adaptive play technologies critique existing systems (easy medium hard system), ideas
+%%% , problems and challenges, works has been done, goals for this study and future works.
+%%% adapting play technologies by chaning Player, NPC, Environment parameters.
