working on thesis

--- a/doc/thesis/content/acknowledgements.tex
+++ b/doc/thesis/content/acknowledgements.tex
@@ -1,6 +1,5 @@
 First and foremost thanks God for bestowing me the ability to
-learn, to speak and to write. For all of the oppurtinities for progress and
-for all the mercy and compassion I have experienced throughout my life from Him.\\
+learn, to speak and to write. For all of the oppurtinities and all of His mercy and compassion I have experienced throughout my life.\\
 
 I would like to express my sincere gratitude to my advisors 
 Prof. Kevin G. Stanley and Prof. Regan Mandryk for the continuous support of my M.S. study and research,
