--- a/doc/thesis/content/import/lazzaro2004we.tex
+++ b/doc/thesis/content/import/lazzaro2004we.tex
@@ -9,7 +9,7 @@ emotions into games by adding emotion-producing objects or actions to game play 
 cut scenes? To what extent are game developers already doing this?
 ------------------------
 
-People play games to change or structure their internal experiences. Adults in this study, enjoy filling their heads with thoughts and emotions unrelated to work or school, others enjoy the challenge and chance to test their abilities. Games offer an efficiency and order in playing that they want in life. They value the sensations from doing new things such as dirt-bike racing or flying, that they otherwise lack the skills, resources, or social permission to do. A few like to escape the real world; others enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete absorption. The exciting and relaxing effects of games is very appealing and some apply its therapeutic benefits to “get perspective,” calm down after a hard day, or build self-esteem. Direct observation reveals details about player emotion. We find emotion in player’s visceral, behavioral, cognitive, and social responses to games. Players play to experience these body sensations that result from and drive their actions. Some crave the increased heart rate of excitement from a race, the skin prickling sensation from Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is simply the exchange of worries and thought and feelings for relaxation and contentment or a feeling of achievement knowing they did it right.
+People play games to change or structure their internal experiences. Adults in this study, enjoy filling their heads with thoughts and emotions unrelated to work or school, others enjoy the challenge and chance to test their abilities. Games offer an efficiency and order in playing that they want in life. They value the sensations from doing new things such as dirt-bike racing or flying, that they otherwise lack the skills, resources, or social permission to do. A few like to escape the real world; others enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete absorption. The exciting and relaxing effects of games is very appealing and some apply its therapeutic benefits to "get perspective," calm down after a hard day, or build self-esteem. Direct observation reveals details about player emotion. We find emotion in player’s visceral, behavioral, cognitive, and social responses to games. Players play to experience these body sensations that result from and drive their actions. Some crave the increased heart rate of excitement from a race, the skin prickling sensation from Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is simply the exchange of worries and thought and feelings for relaxation and contentment or a feeling of achievement knowing they did it right.
 ------------------------
 
 Pioneers in Player Experience Research and Design methods XEODesign conducted an
@@ -18,17 +18,17 @@ emotions coming from gameplay rather than story. Our results revealed that peopl
 games not so much for the game itself as for the experience the game creates: an adrenaline
 rush, a vicarious adventure, a mental challenge; or the structure games provide, such as a
 moment of solitude or the company of friends. People play games to create moment-tomoment experiences, whether they are overcoming a difficult game challenge, seeking relief
-from every-day worries, or pursuing what Hal Barwood calls simply “the joy of figuring it out.”
+from every-day worries, or pursuing what Hal Barwood calls simply "the joy of figuring it out."
 ------------------------
 
 The Four Keys unlock emotion with:
 1. Hard Fun: Players like the opportunities for challenge, strategy, and problem
 solving. Their comments focus on the game’s challenge and strategic thinking and
-problem solving. This “Hard Fun” frequently generates emotions and experiences of
+problem solving. This "Hard Fun" frequently generates emotions and experiences of
 Frustration, and Fiero.
 2. Easy Fun: Players enjoy intrigue and curiosity. Players become immersed in games
 when it absorbs their complete attention, or when it takes them on an exciting
-adventure. These Immersive game aspects are “Easy Fun” and generate emotions
+adventure. These Immersive game aspects are "Easy Fun" and generate emotions
 and experiences of Wonder, Awe, and Mystery.
 3. Altered States: Players treasure the enjoyment from their internal experiences in
 reaction to the visceral, behavior, cognitive, and social properties. These players
