worked pilot preparation and changed parts of calibration, also added some related papers

--- a/doc/thesis/content/abbreviations.tex
+++ b/doc/thesis/content/abbreviations.tex
@@ -8,3 +8,5 @@
 \abbrev{AV}   {Arousal/Valence}
 \abbrev{NPC}  {Non-Player Character}
 \abbrev{Mod}  {Modification}
+\abbrev{CSV}  {Camma Separated Values}
+
