--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -83,25 +83,19 @@ may aggregate responses over the course of many events ~\cite{zhang2010service}.
 This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
 
-\section{Why Do We Play?}
-%%% 3 pages: what are games for and why do we play them
-%%% the importance of being challenged for people, and how it helps them to develop
-
-lazzaro2004we---
-others enjoy the challenge and chance to test their abilities. Games offer an efficiency 
-and order in playing that they want in life. They value the sensations from doing new 
-things such as dirt-bike racing or flying, that they otherwise lack the skills, 
-resources, or social permission to do. A few like to escape the real world; others 
-enjoy escaping its social norms. Nearly all enjoy the feeling of challenge and complete 
-absorption. The exciting and relaxing effects of games is very appealing and some apply 
-its therapeutic benefits to "get perspective," calm down after a hard day, or build 
-self-esteem. Direct observation reveals details about player emotion. We find emotion 
-in player's visceral, behavioral, cognitive, and social responses to games. Players play 
-to experience these body sensations that result from and drive their actions. Some crave 
-the increased heart rate of excitement from a race, the skin prickling sensation from 
-Wonder, or the tension of Frustration followed by feelings of Fiero. For others it is 
-simply the exchange of worries and thought and feelings for relaxation and contentment 
-or a feeling of achievement knowing they did it right. ---lazzaro2004we
+\section{Affect and Emotion}
+%%% Here I'd talk about different approaches for describing emotions and affects
+%%% like the AV space
+\section{Measuring Affect}
+%%% Talk about various sensors and their attributes, in particular the GSR sensor
+%%% and how it can be used to detect Arousal using the fazzy logic
+\section{Affect and Play Technologies}
+%%% talk about play technologies and why do people play them
+%%% the importance of being challenged in play technologies
+%%% and its effect on arousal level
+\section{Real Time Game Adaptation}
+%%% talk about works has beed done in this area and different approaches
+%%% and relate that to what we have done in this research
 
 Playing video games for entertainment would help people to have new internal experiences. 
 The virtual world of video games lets adults to play as new characters and enjoy filling 
