--- a/doc/thesis/content/import/import.bib
+++ b/doc/thesis/content/import/import.bib
@@ -53,3 +53,13 @@
   year={2008},
   organization={IEEE}
 }
+@article{griffiths1995effect,
+  title={The effect of Type A personality on physiological arousal while playing computer games},
+  author={Griffiths, Mark D and Dancaster, Imogen},
+  journal={Addictive behaviors},
+  volume={20},
+  number={4},
+  pages={543--548},
+  year={1995},
+  publisher={Elsevier}
+}
