added questionnaire responses

--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -103,9 +103,9 @@ Wonder, or the tension of Frustration followed by feelings of Fiero. For others 
 simply the exchange of worries and thought and feelings for relaxation and contentment 
 or a feeling of achievement knowing they did it right. ---lazzaro2004we
 
-Playing video games for entertainment would help people to have new internal experiences. 
-The virtual world of video games lets adults to play as new characters and enjoy filling 
-their heads with throughts and emotions unrelated to their work or school. Some people value 
+Playing video games as a kind of entertainment would help people to have new internal 
+experiences. The virtual world of video games let adults to play as new rolls and enjoy filling 
+their heads with new throughts and emotions. Some people value 
 the sensation
 
 Games are opportunities for development and design of environemnts therefore 
