--- a/doc/thesis/content/ch02-lit-review.tex
+++ b/doc/thesis/content/ch02-lit-review.tex
@@ -11,15 +11,21 @@
 
 %%% 1 page: overview of what is going on
 
+%%%-----------------------------------------------------------------------------
+
+\section{Affect and Emotion}
+%%% Here I'd talk about different approaches for describing emotions and affects
+%%% like the AV space
+
 Using emotional responses to increase the level of users interaction with a real-time 
 play technology requires an effective technique to identifying specific emotion 
 states within an emotional space. Major existing emotion models in the
-psychology literture includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} ,
+psychology literature includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} ,
 dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models 
 from appraisal theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
 
-Basic emotion theory identifes anger, disgust, fear, happiness, sadness, and 
-surprise ~\cite{peter2006emotion} as the consice set of primary
+Basic emotion theory identifies anger, disgust, fear, happiness, sadness, and 
+surprise ~\cite{peter2006emotion} as the concise set of primary
 emotions. These are actually the least six universal categories researchers agreed 
 upon ~\cite{zagalo2004story}. It also claims these
 primary emotions are distinguishable from each other and
@@ -28,7 +34,7 @@ emotion theory argues that all emotional states reside
 in a two-dimensional space, defined by arousal and valence.
 
 While there are various opinions on identifying emotional
-states, classifcation into discrete emotions ~\cite{dalgleish1999handbook}, or locating
+states, classification into discrete emotions ~\cite{dalgleish1999handbook}, or locating
 emotions along multiple axes ~\cite{russell1989affect, lang1995emotion}, both 
 had limited success in using physiology to identify 
 emotional states ~\cite{cacioppo2000psychophysiology}.
@@ -39,9 +45,9 @@ described as a subjective feeling of pleasantness or unpleasantness while
 arousal is the subjective state feeling activated
 or deactivated ~\cite{barrett1998discrete}. Using an arousal-valence space to create
 the Affect Grid, Russell believed that arousal and valence
-are cognitive dimentions of individual emotion states. Affect is a broad definition 
+are cognitive dimensions of individual emotion states. Affect is a broad definition 
 that includes feelings, moods, sentiments etc. and is commonly used to define the concept of
-emotion ~\cite{picard2003affective}. Russell's circumplex model has two "axes"
+emotion ~\cite{picard2003affective}. Russell's model has two "axes"
 that might be labeled as displeasure/pleasure (horizontal
 axis) and low/high arousal (vertical axis) It is not easy to
 map affective states into distinctive emotional states, However these models can 
@@ -74,7 +80,7 @@ daily life. ~\cite{zhang2010service}. However our dimensional emotion models
 suffers some other problems. One problems is that arousal
 and valence are not independent and one can impact the
 other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences
-in this applied setting is of its other halmarks. Subjective
+in this applied setting is of its other hallmarks. Subjective
 measures based on dimensional emotion theory, such as the
 Affect Grid ~\cite{russell1989affect} and the Self-Assessment 
 Manikin ~\cite{bradley1994measuring}, allow
@@ -82,36 +88,38 @@ for quick assessments of user emotional experiences but they
 may aggregate responses over the course of many events ~\cite{zhang2010service}.
 This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
+%%%-----------------------------------------------------------------------------
 
-\section{Affect and Emotion}
-%%% Here I'd talk about different approaches for describing emotions and affects
-%%% like the AV space
 \section{Measuring Affect}
 %%% Talk about various sensors and their attributes, in particular the GSR sensor
 %%% and how it can be used to detect Arousal using the fazzy logic
+
+%%%-----------------------------------------------------------------------------
+
 \section{Affect and Play Technologies}
 %%% talk about play technologies and why do people play them
 %%% the importance of being challenged in play technologies
 %%% and its effect on arousal level
+
+%%%-----------------------------------------------------------------------------
+
 \section{Real Time Game Adaptation}
 %%% talk about works has beed done in this area and different approaches
 %%% and relate that to what we have done in this research
 
-Playing video games as a kind of entertainment would help people to have new internal 
-experiences. The virtual world of video games let adults to play as new rolls and enjoy filling 
-their heads with new throughts and emotions. Some people value 
-the sensation
-
-Games are opportunities for development and design of environemnts therefore 
-the player can interactively experience various emotions and mental conditions.
-This interactive experience in contrast to movies 
-and other major types of digital entertainment is what makes them exceptional
-
-\section{Play Technologies and Human Body}
-%%% 5 pages: human body and play technologies
-%%% getting challenged and physiological signals, the importance of GSR
-
-\section{Adaptive Play Technologies}
-%%% 10 pages: adaptive play technologies critique existing systems (easy medium hard system), ideas
+%%% adaptive play technologies critique existing systems (easy medium hard system), ideas
 %%% , problems and challenges, works has been done, goals for this study and future works.
 %%% adapting play technologies by chaning Player, NPC, Environment parameters.
+%%% getting challenged and physiological signals, the importance of GSR
+
+Playing video games as a kind of entertainment would help people to have new internal 
+experiences. The virtual world of video games let adults to play as new rolls and enjoy filling 
+their heads with new thoughts and emotions. Some people value 
+the sensation
+
+Games are opportunities for development and design of environments therefore 
+the player can interactively experience various emotions and mental conditions.
+This interactive experience in contrast to cinema 
+and other major types of entertainment is what makes them exceptional
+
+%%%-----------------------------------------------------------------------------
